--- a/demo3.html
+++ b/demo3.html
@@ -47,7 +47,10 @@
     <main class="container">
         <span class="side-menu"></span>
         <span class="modal-menu">карта учебника</span>
-        <a href="java.html" class="icon"></a>
+        <div>
+            <a href="java.html" class="icon"></a>
+            <a href="java.html">Язык JavaScript</a>
+        </div>
         <h1>Структуры данных</h1>
         <p>Изучаем JavaScript: расширенное знакомство со встроенными типами данных, их особенностями.</p>
         <nav class="section navigation">
