--- a/demo3.html
+++ b/demo3.html
@@ -6,7 +6,7 @@
     <title>Структура данных</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheet.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="demo3.css" />
     <script src="main.js"></script>
 </head>
 <body>
