--- a/demo1.html
+++ b/demo1.html
@@ -12,7 +12,7 @@
     <div class="main-container">
         <nav class="site-menu">
             <ul class="site-nav">
-                <li class="site-nav-item">
+                <li class="site-nav-item" id="asd">
                     <a href="dasaf.html">Часть меню</a>
                 </li>
                 <li class="site-nav-item">
