--- a/Test1.html
+++ b/Test1.html
@@ -19,13 +19,15 @@
                 Новости дистанционного обучения<br> <!--(файл distance.html) -->
                 Где находится офис?<br> <!--(нижняя часть документа)--></p> 
             </nav>
-            <p>Центр компьютерного обучения "Специалист" &mdash; <ins>ведущий центр России</ins> в области IT-обучения, являющийся сертифицированным центром обучения Microsoft, Золотым партнером Microsoft, авторизованным центром <strong>Microsoft Business Solutions</strong> и авторизованным центром тестирования <strong>Microsoft Office Specialist</strong>. Учебный центр предлагает подготовку на статусы CCNA&reg;, CCNP&reg; и CCDA&reg; по продуктам и решениям компании Cisco(R); является ведущим учебным центром по Linux и FreeBSD технологиям в России.</p>
-            
-            <p>Наша компания &mdash; первый в России Linux Professional Institute Training Partner (LATP) и Novell Certified Linux Engineer, авторизованный учебный центр ASPLinux; имеет 4 авторизации ведущих фирм: Autodesk, SolidWorks, Grafisoft и Ascon. Лучший учебный центр Autodesk в 2006 году, позволяет пройти обучение на сертифицированных курсах Autodesk по всем продуктам компании (AutoCad, Inventor Series, VIZ и др.).</p>
-            
-            <p>Центр предлагает курсы по всем популярным продуктам Adobe - Photoshop, Illustrator, InDesign, Acrobat, Premiere, PageMaker и др. Здесь можно записаться на курсы Photoshop, курсы Cisco , курсы Microsoft, курсы Linux, курсы AutoCad и др.</p>
+            <section>
+                <p>Наш Центр компьютерного обучения "Специалист" &mdash; <ins>ведущий центр России</ins> в области IT-обучения, являющийся сертифицированным центром обучения Microsoft, Золотым партнером Microsoft, авторизованным центром <strong>Microsoft Business Solutions</strong> и авторизованным центром тестирования <strong>Microsoft Office Specialist</strong>. Учебный центр предлагает подготовку на статусы CCNA&reg;, CCNP&reg; и CCDA&reg; по продуктам и решениям компании Cisco(R); является ведущим учебным центром по Linux и FreeBSD технологиям в России.</p>
+               <p>Наша компания &mdash; первый в России Linux Professional Institute Training Partner (LATP) и Novell Certified Linux Engineer, авторизованный учебный центр ASPLinux; имеет 4 авторизации ведущих фирм: Autodesk, SolidWorks, Grafisoft и Ascon. Лучший учебный центр Autodesk в 2006 году, позволяет пройти обучение на сертифицированных курсах Autodesk по всем продуктам компании (AutoCad, Inventor Series, VIZ и др.).</p>
+                <p>Центр предлагает курсы по всем популярным продуктам Adobe - Photoshop, Illustrator, InDesign, Acrobat, Premiere, PageMaker и др. Здесь можно записаться на курсы Photoshop, курсы Cisco , курсы Microsoft, курсы Linux, курсы AutoCad и др.</p>
+            </section>
             <div align="rights">
-                <p>Отзывы о сайте направляйте веб-мастеру: webmaster@specialist.ru</p>
+                <aside>
+                    <p>Отзывы о сайте направляйте веб-мастеру: webmaster@specialist.ru</p>
+                </aside>
             </div>
         </main>
         <footer>
