--- a/demo4.html
+++ b/demo4.html
@@ -10,32 +10,53 @@
 </head>
 <body>
     <header>
-        <h1>Styles Conference</h1>
+        <h1><a href="demo4.html">Styles Conference</a></h1>
         <h3>24&ndash;26 августа &mdash; Чикаго, штат Иллинойс</h3>
+        <nav>
+            <a href="demo4.html">Главная</a>
+            <a href="speakers.html">Спикеры</a>
+            <a href="schedule.html">Расписание</a>
+            <a href="venue.html">Место проведения</a>
+            <a href="register.html">Регистрация</a>
+        </nav>
     </header>
     <section>
         <h2>Посвящается ремеслу создания сайтов</h2>
         <p>Каждый год самые яркие веб-дизайнеры и фронтенд-разработчики собираются в Чикаго, 
-                чтобы обсудить новейшие технологии. Присоединяйся к нам этим августом</p>
+            чтобы обсудить новейшие технологии. Присоединяйся к нам этим августом</p>
+        <a href="register.html">Зарегистрируйтесь сейчас</a>
     </section>
     <section>
         <section>
-            <h5>Спикеры</h5>
-            <h3>Спикеры мирового класса</h3>
+            <a href="speakers.html">
+                <h5>Спикеры</h5>
+                <h3>Спикеры мирового класса</h3>
+            </a>
             <p>К нам приедут более двадцати фантастических спикеров со всего мира, чтобы поделиться своими историями</p>
         </section>
         <section>
-            <h5>Расписание</h5>
-            <h3>Три вдохновляющих дня</h3>
+            <a href="schedule.html">
+                <h5>Расписание</h5>
+                <h3>Три вдохновляющих дня</h3>
+            </a>
             <p>Наслаждайтесь тремя вдохновляющеми и насыщенными событиями днями переговоров, встреч и всем хорошим вокруг</p>
         </section>
         <section>
-            <h5>Место проведения</h5>
-            <h3>Театр Чикаго</h3>
+            <a href="venue.html">
+                <h5>Место проведения</h5>
+                <h3>Театр Чикаго</h3>
+            </a>
             <p>Театр Чикаго в самом центре города обеспечит красивое место првоедения конференциипш</p>
         </section>
     </section>
     <footer>
+        <nav>
+            <a href="demo4.html">Главная</a>
+            <a href="speakers.html">Спикеры</a>
+            <a href="schedule.html">Расписание</a>
+            <a href="venue.html">Место проведения</a>
+            <a href="register.html">Регистрация</a>
+        </nav>
         <small>&copy; Styles Conference</small>
     </footer>
     
