--- a/demo4.html
+++ b/demo4.html
@@ -9,8 +9,10 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <header>
-        <h1><a href="demo4.html">Styles Conference</a></h1>
+    <header class="container">
+        <h1>
+            <a href="demo4.html">Styles Conference</a>
+        </h1>    
         <h3>24&ndash;26 августа &mdash; Чикаго, штат Иллинойс</h3>
         <nav>
             <a href="demo4.html">Главная</a>
@@ -20,13 +22,13 @@
             <a href="register.html">Регистрация</a>
         </nav>
     </header>
-    <section>
+    <section class="hero container">
         <h2>Посвящается ремеслу создания сайтов</h2>
         <p>Каждый год самые яркие веб-дизайнеры и фронтенд-разработчики собираются в Чикаго, 
-            чтобы обсудить новейшие технологии. Присоединяйся к нам этим августом</p>
-        <a href="register.html">Зарегистрируйтесь сейчас</a>
+            чтобы обсудить новейшие технологии. Присоединяйся к нам этим августом</p>   
+        <a class="btn btn-alt" href="register.html">Зарегистрируйтесь сейчас</a>
     </section>
-    <section>
+    <section class="container">
         <section>
             <a href="speakers.html">
                 <h5>Спикеры</h5>
@@ -46,10 +48,10 @@
                 <h5>Место проведения</h5>
                 <h3>Театр Чикаго</h3>
             </a>
-            <p>Театр Чикаго в самом центре города обеспечит красивое место првоедения конференциипш</p>
+            <p>Театр Чикаго в самом центре города обеспечит красивое место првоедения конференции</p>
         </section>
     </section>
-    <footer>
+    <footer class="container">
         <nav>
             <a href="demo4.html">Главная</a>
             <a href="speakers.html">Спикеры</a>
