--- a/schedule.html
+++ b/schedule.html
@@ -9,6 +9,14 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <header class="container">
+        <section class="container">
+            <h1></h1>
+        </section>  
+    </header>
+        
+    <footer class="container">
     
+    </footer>
 </body>
 </html>
