--- a/register.html
+++ b/register.html
@@ -6,16 +6,17 @@
     <title>Register</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,100">
     <script src="main.js"></script>
 </head>
 <body>
-    <header class="container">
+    <header class="container group">
         <section class="container">
             <h1></h1>
         </section>   
     </header>
 
-    <footer class="container">
+    <footer class="primary-footer container group">
 
     </footer>
     
