--- a/speakers.html
+++ b/speakers.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Speakers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/stylesheets/demo4.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,100">
     <script src="main.js"></script>
 </head>
 <body>
-    <header class="container group">
+    <header class="primary-header container group">
         <section class="container">
             <h1></h1>
         </section>  
