--- a/register.html
+++ b/register.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Register</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/stylesheets/demo4.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,100">
     <script src="main.js"></script>
 </head>
 <body>
-    <header class="container group">
-        <section class="container">
-            <h1></h1>
-        </section>   
+    <header class="primary-header container group">
+        <section class="row-alt">
+            <div class="container">
+                <h1></h1>
+            </div>
+        </section>       
     </header>
 
     <footer class="primary-footer container group">
