--- a/demo4.html
+++ b/demo4.html
@@ -16,11 +16,13 @@
         </h1>    
         <h3 class="tagline">24&ndash;26 августа &mdash; Чикаго, штат Иллинойс</h3>
         <nav class="nav primary-nav">
-            <a href="demo4.html">Главная</a>
-            <a href="speakers.html">Спикеры</a>
-            <a href="schedule.html">Расписание</a>
-            <a href="venue.html">Место проведения</a>
-            <a href="register.html">Регистрация</a>
+            <ul>
+               <li><a href="demo4.html">Главная</a></li><!--
+                --><li><a href="speakers.html">Спикеры</a></li><!--
+                --><li><a href="schedule.html">Расписание</a></li><!--
+                --><li><a href="venue.html">Место проведения</a></li><!--
+                --><li><a href="register.html">Регистрация</a></li>
+            </ul>
         </nav>
     </header>
     <section class="hero container">
@@ -63,11 +65,13 @@
     </section>
     <footer class="primary-footer container group">
         <nav class="nav">
-            <a href="demo4.html">Главная</a>
-            <a href="speakers.html">Спикеры</a>
-            <a href="schedule.html">Расписание</a>
-            <a href="venue.html">Место проведения</a>
-            <a href="register.html">Регистрация</a>
+            <ul>
+                <li><a href="demo4.html">Главная</a></li><!--
+                --><li><a href="speakers.html">Спикеры</a></li><!--
+                --><li><a href="schedule.html">Расписание</a></li><!--
+                --><li><a href="venue.html">Место проведения</a></li><!--
+                --><li><a href="register.html">Регистрация</a></li>
+            </ul>
         </nav>
         <small>&copy; Styles Conference</small>
     </footer>  
