add maps for venue

--- a/speakers.html
+++ b/speakers.html
@@ -50,6 +50,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
+                        <img src="assets/images/speakers/chris-mills.jpg" alt="Крис Миллс">
                         <ul>
                             <li>
                                 <a href="https://twitter.com/chrisdavidmills">@chrisdavidmills</a>
@@ -77,6 +78,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
+                        <img src="assets/images/speakers/shay-howe.jpg" alt="Шэй Хоу">
                         <ul>
                             <li>
                                 <a href="https://twitter.com/shayhowe">@shayhowe</a>
