--- a/demo4.html
+++ b/demo4.html
@@ -35,8 +35,9 @@
         <div class="grid">
             <!-- Спикеры -->
             <section class="teaser col-1-3">
+                <h5>Спикеры</h5>
                 <a href="speakers.html">
-                    <h5>Спикеры</h5>
+                    <img src="assets/images/home/speakers.jpg" alt="Профессиональные спикеры">
                     <h3>Спикеры мирового класса</h3>
                 </a>
                 <p>К нам приедут более двадцати фантастических спикеров со всего мира, чтобы поделиться своими историями</p>
@@ -45,8 +46,9 @@
                 Расписание
             
             --><section class="teaser col-1-3">
+                <h5>Расписание</h5>
                 <a href="schedule.html">
-                    <h5>Расписание</h5>
+                    <img src="assets/images/home/schedule.jpg" alt="Расписание">
                     <h3>Три вдохновляющих дня</h3>
                 </a>
                 <p>Наслаждайтесь тремя вдохновляющеми и насыщенными событиями днями переговоров, встреч и всем хорошим вокруг</p>
@@ -55,8 +57,9 @@
                 Место проведения
             
             --><section class="teaser col-1-3">
+                <h5>Место проведения</h5>
                 <a href="venue.html">
-                    <h5>Место проведения</h5>
+                    <img src="assets/images/home/venue.jpg" alt="Место проведения мероприятия">
                     <h3>Театр Чикаго</h3>
                 </a>
                 <p>Театр Чикаго в самом центре города обеспечит красивое место првоедения конференции</p>
