--- a/venue.html
+++ b/venue.html
@@ -25,7 +25,26 @@
             </ul>
         </nav>  
     </header>
-        
+    <section class="row">
+        <div class="grid">
+            <section class="venue-theatre">
+                <div class="col-1-3">
+                    <h2>Chicago Theatre</h2>
+                    <p>175 N State St <br> Chicago, IL 60601</p>
+                    <p><a href="http://www.thechicagotheatre.com/">thechicagotheatre.com</a> <br> (312) 462-6300</p>
+                </div><!--
+                --><iframe class="venue-map col-2-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2970.352846158897!2d-87.62983548517654!3d41.885268172945715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2ca55810a493%3A0x4700ddf60fcbfad6!2z0KfQuNC60LDQs9GB0LrQuNC5INCi0LXQsNGC0YA!5e0!3m2!1sru!2sru!4v1546699475842"></iframe>
+            </section>
+            <section class="venue-hotel">
+                <div class="col-1-3">
+                    <h2>Hotel Chicago</h2>
+                    <p>333 N Dearborn St <br> Chicago, IL 60654</p>
+                    <p><a href="https://www.marriott.com/hotels/travel/chiax-hotel-chicago-downtown-autograph-collection/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2">thehotelchicago.com <br> (312) 245-0333</a></p>
+                </div><!--
+                --><iframe class="venue-map col-2-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2100.2489745989483!2d-87.63091258928151!3d41.888543116927366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2cb1c63b029f%3A0x3ef9184b83d0ebfe!2zMzMzIE4gRGVhcmJvcm4gU3QsIENoaWNhZ28sIElMIDYwNjU0LCDQodCo0JA!5e0!3m2!1sru!2sru!4v1546700542113"</iframe>
+            </section>
+        </div>
+    </section>
     <footer class="primary-footer container group">
         <nav class="nav">
             <ul>
